# vrframework

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE  PORTING.md  README.md
_agent_reports/: VR_UI_QUAD_LAYER_GUIDE.md  fh5_6dof_SOLVED_20260605.md  fh5_camera_pose_hook_spec.md  fh5_color_issue_offline.md  fh5_committer_hook_spec.md  fh5_current_vr_audit_plan_20260605.md  fh5_empress_camera_followup2_rawlog.md  fh5_empress_camera_followup_rawlog.md  fh5_empress_camera_hooks_RE.md  fh5_empress_camera_input_lanes_RE.md  fh5_empress_camera_input_lanes_RE_rawlog.md  fh5_empress_camera_pass2_rawlog.md  fh5_empress_camera_pass3_rawlog.md  fh5_empress_camera_pass4_rawlog.md  fh5_empress_camera_pass5_rawlog.md  fh5_empress_camerapos_writer_RE.md  fh5_empress_clone_orientation_RE.md  fh5_empress_lever_finalize.md  fh5_empress_producer_camerapos_RE.md  fh5_empress_shadow_cascade_RE.md  fh5_empress_upstream_pose_writer_RE.md  fh5_empress_viewsource_orientation_RE.md  fh5_empress_writers_vtbl_FAST.md  fh5_freeroam_hud_stall.md  fh5_hud_quad_re_plan_20260605.md  fh5_hud_quad_status_20260607.md  fh5_openxr_movement_offline.md  fh5_stereo_cbuffer_spec.md  fh5_synced_eye_rendering_deep_dive_20260605.md  fh5_synced_sequential_equivalent_probe_20260606.md  fh5_ui_active_page_capture_20260605.md  fh5_ui_screen_reader_spec_20260605.md  fh5_ui_visibility_field_20260605.md  fh5_ui_vtable_rtti_table_20260605.tsv  fh5_upstream_6dof_status_20260605.md  fh5_upstream_architecture_deep_dive_20260605.md  fh5_vr_current_status_20260605.md
examples/anvil_adapter/: ExampleAnvilAdapter.cpp  ExampleAnvilAdapter.hpp  README.md
examples/manifests/: valhalla.toml
fh5vr/: CMakeLists.txt
guides/: 00-README.md  01-the-big-picture.md  02-injection-and-bootstrap.md  03-hooking-and-pattern-scanning.md  04-graphics-api-interception.md  05-the-framework-core.md  06-vr-runtime-integration.md  07-frame-timing-and-synchronization.md  08-stereo-rendering-strategies.md  09-camera-and-coordinate-systems.md  10-submission-and-the-taa-problem.md  11-hud-ui-and-menus-in-vr.md  12-input-and-motion-controllers.md  13-reading-the-engine-object-model.md  14-engine-tweaks-and-quirks.md  15-multi-title-architecture-and-build.md  16-porting-checklist-for-a-new-engine.md
include/: Framework.hpp  Math.hpp  Mod.hpp  ModSettings.h  Mods.hpp
include/hooks/: D3D11Hook.hpp  D3D12Hook.hpp  WindowsMessageHook.hpp
include/memory/: memory_mul.h
include/mods/: VR.hpp  VRConfig.hpp
include/mods/vr/: D3D12Component.hpp
include/spi/: EngineCaps.hpp  FrameTimeline.hpp  IEngineAdapter.hpp  StereoView.hpp
include/utility/: Config.hpp  Hooks.hpp  ScopeProfiler.h
include/vr/: VRRuntime.hpp
include/vr/runtimes/: OpenVR.hpp  OpenXR.hpp  OpenXRDispatch.hpp
scripts/: Deploy-FH5VR.ps1  FH5Window.ps1  Launch-FH5VR-Retail.ps1  Launch-FH5VR.ps1  Navigate-FH5.ps1  Set-FH5SimPose.ps1  ida_dump_fh5_runtime_vtables.py  ida_extract_fh5_camera_tables.py  ida_probe_fh5_empress_camera_patterns.py
src/: Framework.cpp  Mod.cpp  Mods.cpp
src/fh5vr/: Fh5Adapter.cpp  Fh5Adapter.hpp  Fh5CamDriver.cpp  Fh5CamDriver.hpp  Fh5CameraCbuffer.cpp  Fh5CameraCbuffer.hpp  Fh5MenuNav.cpp  Fh5MenuNav.hpp  Fh5UiScreen.cpp  Fh5UiScreen.hpp  ModConfig.cpp  dllmain.cpp
src/hooks/: D3D11Hook.cpp  D3D12Hook.cpp  WindowsMessageHook.cpp
src/memory/: memory_mul.cpp
src/mods/: VR.cpp  VRConfig.cpp
src/mods/vr/: D3D12Component.cpp
src/spi/: FrameTimeline.cpp
src/utility/: Config.cpp  Hooks.cpp
src/vr/runtimes/: OpenXR.cpp  OpenXRDispatch.cpp
